2008-12-23  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c
	* src/home/hd-render-manager.h
	* src/mb/hd-comp-mgr.c:
	Removed desktop grab for Task Launcher as it wasn't required.
	Added code to use signals to queue redraws in order to avoid
	multiple redraws when several different areas are damaged.

2008-12-23  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-switcher.c:
	Fixed the GLIB CRITICALs and general breakage of task navigator 
	introduced by Kimmo's refactoring.
	* src/home/hd-render-manager.c:
	Added null-pointer check in case get_state is ever called 
	before hd-render-manager is created.

2008-12-22  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Hide the task launcher when clicked on top. Fixes NB#96035

	* src/launcher/hd-launcher.c (hd_launcher_constructed):

2008-12-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* TODO: updated, added new and removed old items.

	* src/launcher/hd-launcher.[ch] (hd_launcher_get_back_button): New.
	Needed to allow creating HdLauncher before the render manager.
	(hd_launcher_constructed): Remove hd_render_manager_set_button call.
	The render manager will use hd_launcher_get_back_button to get it.

	* src/home/hd-render-manager.c: Decided to drop the HdRenderManager
	argument from all functions (some had it, some not) because of the
	singleton.
	(hd_render_manager_get): Removed, we don't need multiple render managers.
	(hd_render_manager_create): New. Added to create and initialise the
	render manager. Here the manager is tied to other singletons, such as
	HdTaskNavigator etc.
	(hd_render_manager_finalize): Add the missing unrefs, which would
	really belong to dispose handler, since dispose handler is meant for
	removing of member objects.
	(hd_render_manager_initialised): Removed. The singleton is now always
	initialised at creation time (as far as possible).
	(hd_render_manager_set_order): Remove unnecessary checking code.